# Kama-HTTPServer

./: CMakeLists.txt  README.md
AIApps/ChatServer/include/: ChatServer.h
AIApps/ChatServer/include/AIUtil/: AIConfig.h  AIFactory.h  AIHelper.h  AISpeechProcessor.h  AIStrategy.h  AIToolRegistry.h
AIApps/ChatServer/include/handlers/: AIMenuHandler.h  AIUploadHandler.h  AIUploadSendHandler.h  ChatCreateAndSendHandler.h  ChatEntryHandler.h  ChatHandler.h  ChatHistoryHandler.h  ChatLoginHandler.h  ChatLogoutHandler.h  ChatRegisterHandler.h  ChatSendHandler.h  ChatSessionsHandler.h  ChatSpeechHandler.h
AIApps/ChatServer/resource/: schema.sql
AIApps/ChatServer/src/: ChatServer.cpp  main.cpp
AIApps/ChatServer/src/AIUtil/: AIConfig.cpp  AIHelper.cpp  AIStrategy.cpp  AIToolRegistry.cpp
AIApps/ChatServer/src/handlers/: ChatCreateAndSendHandler.cpp  ChatSendHandler.cpp
HttpServer/src/http/: HttpRequest.cpp
